Fix pattern cards

--- a/index.html
+++ b/index.html
@@ -1475,11 +1475,10 @@
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
   &lt;div class="unit [ xs-1 ] gutter">
-    &lt;h3 class="push-0 bold">Item Name&lt;/h3>
+    &lt;h3 class="push-0 bold mega">Item Name&lt;/h3>
     &lt;span class="push">$$$$&lt;/span>
     &lt;p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
-    &lt;a class="btn btn-save">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
-    &lt;a class="btn btn-cart push-r-2">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
+    &lt;a class="btn">&lt;span aria-label="More">More&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
 &lt;/div>
 </pre></code>
