--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -27,13 +27,13 @@
   </script>
 
   <main class="pad-t-2 pad-b-2" id="main" role="main" tabindex="0">
-    <div class="grid island">
+    <div class="grid island-2">
       <div class="unit unit-push-xl-1-4 l-1 xl-3-4 push-2">
 
         <script type="application/json" data-pattern="filters/view-grid"></script>
 
         <div class="grid pad-b-2 pad-t-2">
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "h3": "Collection",
@@ -42,7 +42,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/three-by-three-by-three.jpg",
@@ -52,7 +52,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/octahedral-prism.jpg",
@@ -62,7 +62,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/jigsaw-plain.jpg",
@@ -72,7 +72,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/pyramid-rubik.jpg",
@@ -82,7 +82,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/jigsaw-two.jpg",
@@ -92,7 +92,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/two-by-two-by-two.jpg",
@@ -102,7 +102,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/multiple-rubik.jpg",
@@ -112,7 +112,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/rubiks.jpg",
@@ -122,7 +122,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/chess-pieces.jpg",
@@ -132,7 +132,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/rubik-two-by-two.jpg",
@@ -142,7 +142,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/checkers-product.jpg",
