--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -20,11 +20,10 @@
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
     <div class="unit [ xs-1 ] gutter">
-      <h3 class="push-0 bold">Item Name</h3>
+      <h3 class="push-0 bold mega">Item Name</h3>
       <span class="push">$$$$</span>
       <p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <a class="btn btn-save"><span aria-label="Save">Save<i></i></span></a>
-      <a class="btn btn-cart push-r-2"><span aria-label="Cart">Cart<i></i></span></a>
+      <a class="btn"><span aria-label="More">More<i></i></span></a>
     </div>
   </div>
 
