Add changes to pattern library

--- a/pages/home.html
+++ b/pages/home.html
@@ -46,7 +46,7 @@
           {
             "img[src]": "../images/wrench.jpg",
             "h3": "Fixing the Cube",
-            "p": "Check out our list of manual of your rubik and get cracking. From our 2 by 2 to our hexagonal rubiks, we got the guide to help you through the steps necessary to master your cube"
+            "p": "From our 2 by 2 to our hexagonal rubiks, we have the guide to help you through the steps necessary to master your cube"
           }
         </script>
       </div>
