--- a/patterns/filters/filter.html
+++ b/patterns/filters/filter.html
@@ -21,7 +21,7 @@
 
         <fieldset class="field-padding">
           <div class="filter-section-title pad-t">
-            <legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Price</legend>
+            <legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Price</legend>
           </div>
           <div class="gutter">
             <ul class="list-group pad-t pad-b-2">
@@ -44,7 +44,7 @@
             </ul>
           </div>
           <div class="filter-section-title-straight pad-t">
-            <legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Features</legend>
+            <legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Features</legend>
           </div>
           <div class="gutter">
             <ul class="list-group pad-t pad-b-2">
@@ -91,7 +91,7 @@
             </ul>
           </div>
           <div class="filter-section-title-straight pad-t">
-            <legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Design</legend>
+            <legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Design</legend>
           </div>
           <div class="gutter">
             <ul class="list-group pad-t pad-b-2">
@@ -114,7 +114,7 @@
             </ul>
           </div>
           <div class="filter-section-title-straight pad-t">
-            <legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Accessibility</legend>
+            <legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Accessibility</legend>
           </div>
           <div class="gutter">
             <ul class="list-group pad-t pad-b-2">
