--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -83,10 +83,10 @@
     <section class="footer-bottom island text-center">
 
       <div class="grid grid-middle">
-        <div class="unit [ s-1-2 ] text-right gutter-1-4">
+        <div class="unit [ xs-1-2 s-1-2 m-1-2 l-1-2 ] text-right gutter-1-4">
           <i class="icon i-64"><svg><use xlink:href="../../images/icons.svg#footer-logo"></use></svg></i>
         </div>
-        <div class="unit [ s-1-2 ] text-left gutter-1-4">
+        <div class="unit [ xs-1-2 s-1-2 m-1-2 l-1-2 ] text-left gutter-1-4">
           <span class="yotta bold logo-footer">Rubikas</span>
         </div>
 
