--- a/patterns/navigation/section.html
+++ b/patterns/navigation/section.html
@@ -15,14 +15,13 @@
 <body>
 
   <div class="grid grid-middle sections gutter island">
-    <div class="unit [ xs-1 l-2-3 ] ">
-      <img class="img-flex" src="http://placehold.it/640x480" alt="">
+    <div class="unit [ xs-1 l-1-2 ] ">
+      <img class="img-section-banner" src="http://placehold.it/640x480" alt="">
     </div>
-    <div class="unit [ xs-1 l-1-3 ] island pad-t-2 pad-b-2">
-      <div class="wrapper">
+    <div class="unit [ xs-1 l-1-2 ] island pad-t-2 pad-b-2">
+      <div class="max-length">
         <h2>That’s a Cube?</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a class="btn"><span aria-label="More">More<i></i></span></a>
       </div>
     </div>
   </div>
