--- a/index.html
+++ b/index.html
@@ -1471,14 +1471,14 @@
                 </i>
               </button>
               <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card content-fill pad-b-1-2"&gt;
-  &lt;div class="unit [ xs-1 ] push">
+  &lt;div class="unit [ xs-1 ] push text-center">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
   &lt;div class="unit [ xs-1 ] gutter">
     &lt;h3 class="push-0 bold mega">Item Name&lt;/h3>
     &lt;span class="push">$$$$&lt;/span>
     &lt;p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
-    &lt;a class="btn">&lt;span aria-label="More">More&lt;i>&lt;/i>&lt;/span>&lt;/a>
+    &lt;a class="btn  btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
   &lt;/div>
 &lt;/div>
 </pre></code>
@@ -1542,10 +1542,10 @@
                 </i>
               </button>
               <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="cart-item main-card grid"&gt;
-  &lt;div class="push unit xs-1 m-1-2">
+  &lt;div class="push unit xs-1 s-1 m-1 l-1 xl-1-2">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
   &lt;/div>
-  &lt;div class="gutter pad-t unit xs-1 m-1-2">
+  &lt;div class="gutter pad-t unit xs-1 s-1 m-1 l-1 xl-1-2">
     &lt;h3 class="push-1-4">Item Name&lt;/h3>
     &lt;span class="push-1-8 block">$$$$&lt;/span>
     &lt;p class="push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
@@ -1761,7 +1761,7 @@
               </button>
               <code><pre id="card-info-card-code-sample-copy-chunk">&lt;div class="basic-card content-fill"&gt;
   &lt;a class="basic-card-link link-box" href="#">
-    &lt;div class="grid">
+    &lt;div class="grid pad-b-1-2">
       &lt;div class="unit [ xs-1 ] ">
         &lt;img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
       &lt;/div>
@@ -1928,7 +1928,7 @@
 
       &lt;fieldset class="field-padding">
         &lt;div class="filter-section-title pad-t">
-          &lt;legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Price&lt;/legend>
+          &lt;legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Price&lt;/legend>
         &lt;/div>
         &lt;div class="gutter">
           &lt;ul class="list-group pad-t pad-b-2">
@@ -1951,7 +1951,7 @@
           &lt;/ul>
         &lt;/div>
         &lt;div class="filter-section-title-straight pad-t">
-          &lt;legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Features&lt;/legend>
+          &lt;legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Features&lt;/legend>
         &lt;/div>
         &lt;div class="gutter">
           &lt;ul class="list-group pad-t pad-b-2">
@@ -1998,7 +1998,7 @@
           &lt;/ul>
         &lt;/div>
         &lt;div class="filter-section-title-straight pad-t">
-          &lt;legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Design&lt;/legend>
+          &lt;legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Design&lt;/legend>
         &lt;/div>
         &lt;div class="gutter">
           &lt;ul class="list-group pad-t pad-b-2">
@@ -2021,7 +2021,7 @@
           &lt;/ul>
         &lt;/div>
         &lt;div class="filter-section-title-straight pad-t">
-          &lt;legend class="pad-t-1-2 pad-b-1-2 bold peta gutter">Accessibility&lt;/legend>
+          &lt;legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Accessibility&lt;/legend>
         &lt;/div>
         &lt;div class="gutter">
           &lt;ul class="list-group pad-t pad-b-2">
@@ -2307,10 +2307,10 @@
   &lt;section class="footer-bottom island text-center">
 
     &lt;div class="grid grid-middle">
-      &lt;div class="unit [ s-1-2 ] text-right gutter-1-4">
+      &lt;div class="unit [ xs-1-2 s-1-2 m-1-2 l-1-2 ] text-right gutter-1-4">
         &lt;i class="icon i-64">&lt;svg>&lt;use xlink:href="../../images/icons.svg#footer-logo"/>&lt;/svg>&lt;/i>
       &lt;/div>
-      &lt;div class="unit [ s-1-2 ] text-left gutter-1-4">
+      &lt;div class="unit [ xs-1-2 s-1-2 m-1-2 l-1-2 ] text-left gutter-1-4">
         &lt;span class="yotta bold logo-footer">Rubikas&lt;/span>
       &lt;/div>
 
@@ -3798,14 +3798,13 @@
                 </i>
               </button>
               <code><pre id="navigation-section-code-sample-copy-chunk">&lt;div class="grid grid-middle sections gutter island"&gt;
-  &lt;div class="unit [ xs-1 l-2-3 ] ">
-    &lt;img class="img-flex" src="http://placehold.it/640x480" alt="">
+  &lt;div class="unit [ xs-1 l-1-2 ] ">
+    &lt;img class="img-section-banner" src="http://placehold.it/640x480" alt="">
   &lt;/div>
-  &lt;div class="unit [ xs-1 l-1-3 ] island pad-t-2 pad-b-2">
-    &lt;div class="wrapper">
+  &lt;div class="unit [ xs-1 l-1-2 ] island pad-t-2 pad-b-2">
+    &lt;div class="max-length">
       &lt;h2>That&#x2019;s a Cube?&lt;/h2>
       &lt;p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p>
-      &lt;a class="btn">&lt;span aria-label="More">More&lt;i>&lt;/i>&lt;/span>&lt;/a>
     &lt;/div>
   &lt;/div>
 &lt;/div>
