--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -28,12 +28,12 @@
 
   <main class="pad-t-2 pad-b-2" id="main" role="main" tabindex="0">
     <div class="grid island-2">
-      <div class="unit unit-push-xl-1-4 l-1 xl-3-4 push-2">
+      <div class="unit xs-1 s-1 m-1 l-1 unit-push-xl-1-4 l-1 xl-3-4 push-2">
 
         <script type="application/json" data-pattern="filters/view-grid"></script>
 
         <div class="grid pad-b-2 pad-t-2">
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "h3": "Collection",
@@ -42,7 +42,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/three-by-three-by-three.jpg",
@@ -52,7 +52,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/octahedral-prism.jpg",
@@ -62,7 +62,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/jigsaw-plain.jpg",
@@ -72,17 +72,16 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
-                "img[src]": "../images/pyramid-rubik.jpg",
-                "h3": "Pyramid",
+                "h3": "Collection",
                 "span": "$28",
                 "p": "Colour Blind and Blind friendly"
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/jigsaw-two.jpg",
@@ -92,7 +91,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/two-by-two-by-two.jpg",
@@ -102,7 +101,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/multiple-rubik.jpg",
@@ -112,7 +111,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/rubiks.jpg",
@@ -122,7 +121,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/chess-pieces.jpg",
@@ -132,7 +131,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/rubik-two-by-two.jpg",
@@ -142,7 +141,7 @@
               }
             </script>
           </div>
-          <div class="unit s-1 m-1-2 l-1-3 xl-1-4">
+          <div class="unit s-1 m-1-2 l-1-3 xl-1-3">
             <script type="application/json" data-pattern="card/basic-card">
               {
                 "img[src]": "../images/checkers-product.jpg",
@@ -155,7 +154,7 @@
         </div>
         <script type="application/json" data-pattern="navigation/page-navigation"></script>
       </div>
-      <div class="unit l-1 unit-pull-xl-3-4 xl-1-4 pad-b-2">
+      <div class="unit xs-1 s-1 m-1 l-1 unit-pull-xl-3-4 xl-1-4 pad-b-2">
         <script type="application/json" data-pattern="filters/filter"></script>
       </div>
 
