--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -16,14 +16,14 @@
 <body>
 
   <div class="grid cart-item main-card content-fill pad-b-1-2">
-    <div class="unit [ xs-1 ] push">
+    <div class="unit [ xs-1 ] push text-center">
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
     <div class="unit [ xs-1 ] gutter">
       <h3 class="push-0 bold mega">Item Name</h3>
       <span class="push">$$$$</span>
       <p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <a class="btn"><span aria-label="More">More<i></i></span></a>
+      <a class="btn  btn-save btn-small-flip pad-t"><span aria-label="Save">Save<i></i></span></a>
     </div>
   </div>
 
