--- a/patterns/card/cart-item.html
+++ b/patterns/card/cart-item.html
@@ -16,10 +16,10 @@
 <body>
 
   <div class="cart-item main-card grid">
-    <div class="push unit xs-1 m-1-2">
+    <div class="push unit xs-1 s-1 m-1 l-1 xl-1-2">
       <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
     </div>
-    <div class="gutter pad-t unit xs-1 m-1-2">
+    <div class="gutter pad-t unit xs-1 s-1 m-1 l-1 xl-1-2">
       <h3 class="push-1-4">Item Name</h3>
       <span class="push-1-8 block">$$$$</span>
       <p class="push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
