--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -17,7 +17,7 @@
 
   <div class="basic-card content-fill">
     <a class="basic-card-link link-box" href="#">
-      <div class="grid">
+      <div class="grid pad-b-1-2">
         <div class="unit [ xs-1 ] ">
           <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
         </div>
