Fix image sizing

--- a/index.html
+++ b/index.html
@@ -1859,11 +1859,16 @@
       <nav class="pattern-nav">
         <ol class="list-group-inline push-1-4 pad-b-1-4">
             <li><a href="#filters--filter">Filter</a></li>
+            <li><a href="#filters--product-listing">Product listing</a></li>
             <li><a href="#filters--view-grid">View grid</a></li>
         </ol>
       </nav>
   </div>
 
+      <div class="pattern-desc milli island" >
+        <div class="max-length"><p>Filters are to be used when filtering your product list. It should always be visible in your product listing page.</p>
+</div>
+      </div>
 
   
 
@@ -1894,6 +1899,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Filters are to be used when filtering your product list. It should always be visible in your product listing page.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1934,19 +1943,23 @@
           &lt;ul class="list-group pad-t pad-b-2">
             &lt;li class="pad-t island-1-2">
               &lt;input type="checkbox" name="price" id="price-1">
-              &lt;label class="block" for="price-1">$4 &#x2013; $10 Dollars&lt;/label>
+              &lt;label class="block" for="price-1">$4&#x2013;$10 Dollars&lt;/label>
             &lt;/li>
             &lt;li class="island-1-2">
               &lt;input type="checkbox" name="price" id="price-2">
-              &lt;label class="block" for="price-2">$10 &#x2013; $40 Dollars&lt;/label>
+              &lt;label class="block" for="price-2">$10&#x2013;$40 Dollars&lt;/label>
             &lt;/li>
             &lt;li class="island-1-2">
               &lt;input type="checkbox" name="price" id="price-3">
-              &lt;label class="block" for="price-3">$40 &#x2013; $80 Dollars&lt;/label>
+              &lt;label class="block" for="price-3">$40&#x2013;$80 Dollars&lt;/label>
             &lt;/li>
             &lt;li class="island-1-2">
               &lt;input type="checkbox" name="price" id="price-4">
-              &lt;label class="block" for="price-4">$80 &#x2013; $100 Dollars&lt;/label>
+              &lt;label class="block" for="price-4">$80&#x2013;$100 Dollars&lt;/label>
+            &lt;/li>
+            &lt;li class="island-1-2">
+              &lt;input type="checkbox" name="price" id="price-5">
+              &lt;label class="block" for="price-4">+ $105 Dollars&lt;/label>
             &lt;/li>
           &lt;/ul>
         &lt;/div>
@@ -2012,11 +2025,11 @@
             &lt;/li>
             &lt;li class="island-1-2">
               &lt;input type="checkbox" name="design" id="design-3">
-              &lt;label class="block" for="design-3">weight&lt;/label>
+              &lt;label class="block" for="design-3">Weight&lt;/label>
             &lt;/li>
             &lt;li class="island-1-2">
               &lt;input type="checkbox" name="design" id="design-4">
-              &lt;label class="block" for="design-4">texture&lt;/label>
+              &lt;label class="block" for="design-4">Texture&lt;/label>
             &lt;/li>
           &lt;/ul>
         &lt;/div>
@@ -2059,6 +2072,82 @@
           </div>
       </div>
     </div>
+    <div class="pattern-details " id="filters--product-listing" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Product listing</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="filters-product-listing-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="filters/product-listing" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/filters/product-listing.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Page listing should be in the product detail page to display the store&#39;s most popular items.</p>
+</div>
+          </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/filters/product-listing.html" scrolling="no" data-inject-css=" " ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="filters-product-listing-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#filters-product-listing-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="filters-product-listing-code-sample-copy-chunk">&lt;div class="filter gutter pad-b"&gt;
+  &lt;div class="filter-section">
+    &lt;div class="filter-price">
+      &lt;div class="filter-section-title pad-t">
+        &lt;legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Popular Sell&lt;/legend>
+      &lt;/div>
+      &lt;div class="popular-sell">
+
+      &lt;/div>
+    &lt;/div>
+  &lt;/div>
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
     <div class="pattern-details " id="filters--view-grid" style="">
         <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
           <h3 class="pattern-name tera push-1-8">View grid</h3>
@@ -2086,6 +2175,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>View grid is designed specifically to set up how the product is to be layout to users.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2487,6 +2580,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The date input field should be used to add a specific date.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2783,6 +2880,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The phone forms should be used to add phone numbers.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2963,9 +3064,11 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="forms-search-bar-code-sample-copy-chunk">&lt;div class="relative"&gt;
-  &lt;input id="search" type="search" placeholder="Search" style="text-indent:24px;">
-  &lt;i class="icon i-18 absolute search-icon">&lt;svg>&lt;use xlink:href="../../images/icons.svg#search-bar"/>&lt;/svg>&lt;/i>
+              <code><pre id="forms-search-bar-code-sample-copy-chunk">&lt;div class="search-bar-field"&gt;
+  &lt;div class="push gutter pad-t relative">
+    &lt;input id="search" type="search" placeholder="Search" style="text-indent:24px;">
+    &lt;i class="icon i-18 absolute search-icon">&lt;svg>&lt;use xlink:href="../../images/icons.svg#search-bar"/>&lt;/svg>&lt;/i>
+  &lt;/div>
 &lt;/div>
 </pre></code>
             </div>
@@ -3408,6 +3511,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The skip links should always be used for accessibility access above your header.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
