--- a/patterns/filters/filter.html
+++ b/patterns/filters/filter.html
@@ -27,19 +27,23 @@
             <ul class="list-group pad-t pad-b-2">
               <li class="pad-t island-1-2">
                 <input type="checkbox" name="price" id="price-1">
-                <label class="block" for="price-1">$4 – $10 Dollars</label>
+                <label class="block" for="price-1">$4–$10 Dollars</label>
               </li>
               <li class="island-1-2">
                 <input type="checkbox" name="price" id="price-2">
-                <label class="block" for="price-2">$10 – $40 Dollars</label>
+                <label class="block" for="price-2">$10–$40 Dollars</label>
               </li>
               <li class="island-1-2">
                 <input type="checkbox" name="price" id="price-3">
-                <label class="block" for="price-3">$40 – $80 Dollars</label>
+                <label class="block" for="price-3">$40–$80 Dollars</label>
               </li>
               <li class="island-1-2">
                 <input type="checkbox" name="price" id="price-4">
-                <label class="block" for="price-4">$80 – $100 Dollars</label>
+                <label class="block" for="price-4">$80–$100 Dollars</label>
+              </li>
+              <li class="island-1-2">
+                <input type="checkbox" name="price" id="price-5">
+                <label class="block" for="price-4">+ $105 Dollars</label>
               </li>
             </ul>
           </div>
@@ -105,11 +109,11 @@
               </li>
               <li class="island-1-2">
                 <input type="checkbox" name="design" id="design-3">
-                <label class="block" for="design-3">weight</label>
+                <label class="block" for="design-3">Weight</label>
               </li>
               <li class="island-1-2">
                 <input type="checkbox" name="design" id="design-4">
-                <label class="block" for="design-4">texture</label>
+                <label class="block" for="design-4">Texture</label>
               </li>
             </ul>
           </div>
