--- a/patterns/filters/view-grid.html
+++ b/patterns/filters/view-grid.html
@@ -10,7 +10,7 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
   <link href="../forms/forms.css" rel="stylesheet">
-  <link href="leftover.css" rel="stylesheet">
+  <link href="filter.css" rel="stylesheet">
 
 </head>
 <body>
