--- a/patterns/filters/product-listing.html
+++ b/patterns/filters/product-listing.html
@@ -2,23 +2,29 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>text-area</title>
+  <title>Filter</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
-  <link href="../filters/filters.css" rel="stylesheet">
-  <link href="forms.css" rel="stylesheet">
-
+  <link href="../buttons/buttons.css" rel="stylesheet">
+  <link href="../navigation/navigation.css" rel="stylesheet">
+  <link href="filter.css" rel="stylesheet">
 </head>
 <body>
 
-  <div class="search-bar-field">
-    <div class="push gutter pad-t relative">
-      <input id="search" type="search" placeholder="Search" style="text-indent:24px;">
-      <i class="icon i-18 absolute search-icon"><svg><use xlink:href="../../images/icons.svg#search-bar"></use></svg></i>
+  <div class="filter gutter pad-b">
+    <div class="filter-section">
+      <div class="filter-price">
+          <div class="filter-section-title pad-t">
+            <legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Popular Sell</legend>
+          </div>
+          <div class="popular-sell">
+
+          </div>
+      </div>
     </div>
   </div>
 
