Add product details page

--- a/index.html
+++ b/index.html
@@ -252,6 +252,16 @@
                 </a>
               </li>
               <li>
+                <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/product-details-page.html" target="_blank">
+                  <div class="relative">
+                    <span>Product details page</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-pop-out" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
+              <li>
                 <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/product-page.html" target="_blank">
                   <div class="relative">
                     <span>Product page</span>
@@ -2137,7 +2147,7 @@
       &lt;div class="filter-section-title pad-t">
         &lt;legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Popular Sell&lt;/legend>
       &lt;/div>
-      &lt;div class="popular-sell">
+      &lt;div class="popular-scroll">
 
       &lt;/div>
     &lt;/div>
