--- a/patterns/filters/product-listing.html
+++ b/patterns/filters/product-listing.html
@@ -21,7 +21,7 @@
           <div class="filter-section-title pad-t">
             <legend class="pad-t-1-2 pad-b-1-2 bold tera gutter">Popular Sell</legend>
           </div>
-          <div class="popular-sell">
+          <div class="popular-scroll">
 
           </div>
       </div>
