Fix code issues with Markbot

--- a/pages/checkout-page.html
+++ b/pages/checkout-page.html
@@ -270,8 +270,12 @@
                         "option:nth-child(5)": "2022",
                         "option:nth-child(6)": "2024",
                         "option:nth-child(7)": "2025",
-                        "option:nth-child(8)[class]": "hidden",
-                        "option:nth-child(9)[class]": "hidden"
+                        "option:nth-child(8)": "2026",
+                        "option:nth-child(9)": "2027",
+                        "option:nth-child(10)": "2028",
+                        "option:nth-child(11)": "2029",
+                        "option:nth-child(12)": "2030",
+                        "option:nth-child(13)": "2031"
                       }
                     </script>
                   </div>
