--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -23,7 +23,7 @@
       <h3 class="push-0 bold mega">Item Name</h3>
       <span class="push">$$$$</span>
       <p class="pad-t-1-4 push">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <a class="btn  btn-save btn-small-flip pad-t"><span aria-label="Save">Save<i></i></span></a>
+      <a class="btn btn-save btn-small-flip pad-t" href="#"><span aria-label="Save">Save<i></i></span></a>
     </div>
   </div>
 
