--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -22,24 +22,24 @@
 
           <li class="unit [ s-1 ] relative img-display-main">
             <div class="embed embed-3by2 push" id="img-div">
-              <img id="img-shown-one" class="img-display embed-item current-img" src="../../images/wrench.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
-              <img id="img-shown-two" class="img-display embed-item" src="../../images/chess-pieces.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
-              <img id="img-shown-three" class="img-display embed-item" src="../../images/variation-rubik.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
+              <img id="img-shown-one" class="img-display embed-item current-img" src="../../images/variation-rubik.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
+              <img id="img-shown-two" class="img-display embed-item" src="../../images/variation-rubik-2.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
+              <img id="img-shown-three" class="img-display embed-item" src="../../images/variation-rubik-3.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
             </div>
             <div class="grid small-img-show">
               <div class="unit [ xs-1-3 ] gutter-1-8 current-img-s">
                 <a href="#img-shown-one">
-                  <img class="img-flex" src="../../images/wrench.jpg" aria-details="image-of-a-wrench-fixing-a-cube-second-view">
+                  <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="first-image-view-of-product">
                 </a>
               </div>
               <div class="unit [ xs-1-3 ] gutter-1-8">
                 <a href="#img-shown-two">
-                  <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="iimage-of-a-wrench-fixing-a-cube-fourth-view">
+                  <img class="img-flex" src="../../images/variation-rubik-2.jpg" aria-details="">
                 </a>
               </div>
               <div class="unit [ xs-1-3 ] gutter-1-8">
                 <a href="#img-shown-three">
-                  <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="image-of-a-wrench-fixing-a-cube-third-view">
+                  <img class="img-flex" src="../../images/variation-rubik-3.jpg" aria-details="image-of-a-wrench-fixing-a-cube-third-view">
                 </a>
               </div>
           </div>
