--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -21,7 +21,7 @@
         <div class="unit [ xs-1 ] ">
           <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
         </div>
-        <div class="unit [ xs-1 ] ">
+        <div class="unit [ xs-1 ] pad-t">
           <div class="text-info pad-t gutter">
             <h3 class="peta push-1-4 info-card-title bold">New Release</h3>
             <p class="push-1-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
