--- a/patterns/filters/view-grid.html
+++ b/patterns/filters/view-grid.html
@@ -54,7 +54,8 @@
         <label class="link-box icon i-32" for="grid-check">
           <i class="icon i-32 absolute grid-view"><svg><use xlink:href="../../images/icons.svg#grid-view"></use></svg></i>
           <i class="icon i-32 absolute grid-view-selected"><svg><use xlink:href="../../images/icons.svg#grid-view-selected"></use></svg></i>
-      </label>
+        </label>
+      </div>
     </div>
   </div>
 
