--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -19,21 +19,19 @@
 
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
-            <span class="bold footer-section-heading mega push">Customer Service</span>
-            <li><p class="link-box footer-section-text  micro push-0"href="#">Manuals</p></li>
-            <li><p class="link-box footer-section-text  micro push-0"href="#">Offers</p></li>
+            <li class="bold footer-section-heading mega push">Customer Service</li>
+            <li><p class="link-box footer-section-text micro push-0">Manuals</p></li>
+            <li><p class="link-box footer-section-text micro push-0">Offers</p></li>
           </ul>
         </div>
 
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
-            <span class="bold footer-section-heading mega push">Company info</span>
+            <li class="bold footer-section-heading mega push">Company info</li>
             <li><a class="link-box footer-section-text micro"href="../pages/home.html">HomePage</a></li>
             <li><a class="link-box footer-section-text micro"href="../pages/product-page.html">Product Page</a></li>
             <li><a class="link-box footer-section-text micro"href="../pages/product-detail.html">Product Details</a></li>
             <li><a class="link-box footer-section-text micro"href="../pages/checkout-page.html">Checkout</a></li>
-
-
           </ul>
         </div>
 
@@ -42,14 +40,14 @@
           <div class="grid">
             <div class="unit [ xs-1 m-1-2 ] ">
               <ul class="list-group pad-t">
-                <span class="bold footer-section-heading mega push">Features</span>
-                <li><p class="link-box footer-section-text micro push-0"href="#">Competitions</a></li>
-                <li><p class="link-box footer-section-text  micro push-0"href="#">Manuals</p></li>
+                <li class="bold footer-section-heading mega push">Features</li>
+                <li><p class="link-box footer-section-text micro push-0">Competitions</p></li>
+                <li><p class="link-box footer-section-text  micro push-0">Manuals</p></li>
               </ul>
             </div>
 
             <div class="unit [ xs-1 m-1-2] ">
-              <span class="bold footer-section-heading mega push">Follow us:</span>
+              <p class="bold footer-section-heading mega push">Follow us:</p>
               <ul class="list-group-inline">
                 <li>
                   <a href="#">
