--- a/patterns/forms/checkout-table.html
+++ b/patterns/forms/checkout-table.html
@@ -15,44 +15,45 @@
 <body>
   <div>
     <table>
-      <thead  class="table-head">
-          <tr>
-            <th scope="col">Product</th>
-            <th scope="col">Price</th>
-            <th scope="col">Qty</th>
-            <th scope="col">Subtotal</th>
-          </tr>
-        </thead>
-        <tbody class="table-body">
-            <tr>
-              <th scope="row">3by3by3 Cube</th>
-              <td>$28</td>
-              <td>2</td>
-              <td>+GST</td>
-            </tr>
-            <tr>
-              <th scope="row">Hexagon Rubik</th>
-              <td>$46</td>
-              <td>1</td>
-              <td>+GST</td>
-            </tr>
-            <tr>
-              <th scope="row">Checkers board</th>
-              <td>$25</td>
-              <td>1</td>
-              <td>+GST</td>
-            </tr>
-            <tr>
-              <th scope="row" colspan="3">Shipping and Handling</th>
-              <td>FREE</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th scope="row" colspan="3" class="text-right gutter">Grand Total:</th>
-              <td>$150</td>
-            </tr>
-          </tfoot>
+      <caption>Purchase Overview</caption>
+      <thead class="table-head">
+        <tr>
+          <th scope="col">Product</th>
+          <th scope="col">Price</th>
+          <th scope="col">Qty</th>
+          <th scope="col">Subtotal</th>
+        </tr>
+      </thead>
+      <tbody class="table-body">
+        <tr>
+          <th scope="row">3by3by3 Cube</th>
+          <td>$28</td>
+          <td>2</td>
+          <td>+GST</td>
+        </tr>
+        <tr>
+          <th scope="row">Hexagon Rubik</th>
+          <td>$46</td>
+          <td>1</td>
+          <td>+GST</td>
+        </tr>
+        <tr>
+          <th scope="row">Checkers board</th>
+          <td>$25</td>
+          <td>1</td>
+          <td>+GST</td>
+        </tr>
+        <tr>
+          <th scope="row" colspan="3">Shipping and Handling</th>
+          <td>FREE</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th scope="row" colspan="3" class="text-right gutter">Grand Total:</th>
+          <td>$150</td>
+        </tr>
+      </tfoot>
     </table>
   </div>
 </body>
