--- a/patterns/forms/text-area.html
+++ b/patterns/forms/text-area.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div>
-    <label for="comments peta">Comments</label>
+    <label for="comments" class="peta">Comments</label>
     <textarea class="italic milli grey-text" name="comments" id="commments" rows="4" cols="80">Leave us a message!</textarea>
   </div>
 
