--- a/patterns/navigation/page-navigation.html
+++ b/patterns/navigation/page-navigation.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Bread Crumbs</title>
+  <title>Page Navigation</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -61,7 +61,6 @@
       </li>
 
     </ul>
-
 
   </div>
 
