--- a/patterns/forms/date-field.html
+++ b/patterns/forms/date-field.html
@@ -14,20 +14,16 @@
 </head>
 <body>
 
-    <div>
-      <label for="expiration push-1-2">Expiration Date</label>
-      <input type="date" name="expiration" id="expiration" required aria-describedby="date-error">
-      <p class="error-message milli island-1-4 push-0" id="date-error">
-        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
-        <span class="icon-label">Please provide the date information as requested</span>
-      </p>
-    </div>
-
-
-
+  <div>
+    <label for="expiration" class="push-1-2">Expiration Date</label>
+    <input type="date" name="expiration" id="expiration" required aria-describedby="date-error">
+    <p class="error-message milli island-1-4 push-0" id="date-error">
+      <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
+      <span class="icon-label">Please provide the date information as requested</span>
+    </p>
+  </div>
 
   <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
-
 
 </body>
 </html>
