--- a/patterns/forms/phone-form.html
+++ b/patterns/forms/phone-form.html
@@ -14,19 +14,18 @@
 </head>
 <body>
 
+  <div>
     <div>
-      <div>
-        <label for="phone-number">Phone</label>
-        <input type="tel" id="phone-number" required aria-describedby="phone-error" required>
-        <p class="error-message milli island-1-4 push-0 text-center" id="email-error">
-          <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
-          <span class="icon-label">Please provide a properly a reachable phone contact</span>
-        </p>
-      </div>
-
-
-      <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
+      <label for="phone-number">Phone</label>
+      <input type="tel" id="phone-number" required aria-describedby="phone-error">
+      <p class="error-message milli island-1-4 push-0 text-center" id="phone-error">
+        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#form-warning" /></svg></i>
+        <span class="icon-label">Please provide a properly a reachable phone contact</span>
+      </p>
     </div>
+
+    <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
+  </div>
 
 </body>
 </html>
