--- a/patterns/forms/radio-input.html
+++ b/patterns/forms/radio-input.html
@@ -18,8 +18,8 @@
     <label for="status" class="peta bold push-1-2">Registered or Guest</label>
     <div class="grid">
       <div class="unit xs-1-2">
-        <input type="radio" id="resgistered" name="status">
-        <label class="push-r mega" for="resgistered">Registered</label>
+        <input type="radio" id="client" name="status">
+        <label class="push-r mega" for="client">Registered</label>
       </div>
       <div class="unit xs-1-2">
         <input type="radio" id="guest" name="status">
