Add typography to HTML

--- a/products.html
+++ b/products.html
@@ -16,8 +16,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="products.html">Products</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Login</a></li>
+      <li><a href="productpage.html">Product Page</a></li>
+      <li><a href="checkout.html">Checkout</a></li>
     </ul>
   </nav>
 
@@ -36,6 +36,8 @@
 
   <h3>Cryptids</h3>
   <p>An obscure, undocumented creature typically originating from folklore. Typically mythological in nature, but not necessarily supernatural, their existence is only recognized as pseudoscience.</p>
+
+  <a href="checkout.html">Add to Cart</a>
 
   <footer>Mythological Creature Market 2019</footer>
 
