--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="products.html">Products</a></li>
-      <li><a href="#">Product Page</a></li>
-      <li><a href="#">Login</a></li>
+      <li><a href="productpage.html">Product Page</a></li>
+      <li><a href="checkout.html">Checkout</a></li>
     </ul>
   </nav>
 
