Add a button to card

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -2,4 +2,5 @@
   <img class="img-flex" src="images/hoodie-black.svg" alt="">
   <h2>Black Wonderland Hoodie</h2>
   <a>See More</a>
+  {% pattern buttons/ghost %}
 </div>
