--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,5 +1,5 @@
 <div class="card">
   <img class="img-flex" src="images/hoodie-black.svg" alt="">
   <h2>Black Wonderland Hoodie</h2>
-  {% pattern buttons/ghost %}
+  {% pattern buttons/seemore %}
 </div>
