--- a/patterns/cards/genre.html
+++ b/patterns/cards/genre.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <img class="img-fex" src="/images/" alt="">
+  <img class="img-fex" src="/images/space.jpg" alt="">
   <h2>Sci-fi</h2>
   <p>An epic tale that takes place in the future.</p>
   </div>
