--- a/_patterns/cards/genre.html
+++ b/_patterns/cards/genre.html
@@ -1,5 +1,8 @@
-<div class="card">
-  <img class="img-fex" src="/images/space.jpg" alt="">
-  <h2>Sci-fi</h2>
-  <p>An epic tale that takes place in the future.</p>
-  </div>
+<section class="grid" id="work">
+      <div class="unit [ xs-1 s-1 m-1-2 l-1-2 ]">
+          <div class="embed embed-3by2">
+          <img class="hover-box-img embed-item" src="images/card-1.jpg" alt="">
+        </div>
+        <div class="hover-box-caption island-1-3 w-1 absolute">
+            <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Shenmo</h2>
+          </div>
