--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -2,7 +2,7 @@
   <section class="contact pad-t pad-b" id="contact" tabindex="0">
     <div class="wrapper">
         <div>
-          <small class="push-0 micro">© <i>2019 Obscure.  All Rights Reserved</i></small>
+          <small class="push-0 micro">© 2019 Obscure. All Rights Reserved</small>
           </div>
         </section>
       </footer>
