--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
-      <img class="img-flex" src="../../images/" alt="">
+      <img class="img-flex" src="../../images/banner.jpg" alt="">
       <div class="info w-1">
       <div class="grid grid-middle wrapper pin-c">
         <div class="unit xs-1 s-1 m-1-2 l-1-2">
