--- a/_patterns/cards/genre.html
+++ b/_patterns/cards/genre.html
@@ -1,7 +1,7 @@
 <section class="grid" id="work">
   <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
-      <img class="hover-box-img embed-item" src="images/card-1.jpg" alt="">
+      <img class="hover-box-img embed-item" src="/images/card-1.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Shenmo</h2>
@@ -9,7 +9,7 @@
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
-      <img class="hover-box-img embed-item" src="images/card-2.jpg" alt="">
+      <img class="hover-box-img embed-item" src="/images/card-2.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Hard-boiled</h2>
@@ -17,7 +17,7 @@
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
-      <img class="hover-box-img embed-item" src="images/card-3.jpg" alt="">
+      <img class="hover-box-img embed-item" src="/images/card-3.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Feminist Science fiction</h2>
@@ -25,7 +25,7 @@
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
-      <img class="hover-box-img embed-item" src="images/card-4.jpg" alt="">
+      <img class="hover-box-img embed-item" src="/images/card-4.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Planetary romance</h2>
@@ -33,7 +33,7 @@
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
-      <img class="hover-box-img embed-item" src="images/card-5.jpg" alt="">
+      <img class="hover-box-img embed-item" src="/images/card-5.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Cyberpunk</h2>
@@ -41,7 +41,7 @@
   </div>
   <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
-      <img class="hover-box-img embed-item" src="images/card-6.jpg" alt="">
+      <img class="hover-box-img embed-item" src="/images/card-6.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Biopunk</h2>
