--- a/_patterns/cards/genre.html
+++ b/_patterns/cards/genre.html
@@ -1,5 +1,5 @@
 <section class="grid" id="work">
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+  <div class="gutter-2 island-1-2 hover-box relative unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
       <img class="hover-box-img embed-item" src="/images/card-1.jpg" alt="">
     </div>
@@ -7,7 +7,7 @@
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Shenmo</h2>
     </div>
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+  <div class="gutter-2 island-1-2 hover-box relative unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
       <img class="hover-box-img embed-item" src="/images/card-2.jpg" alt="">
     </div>
@@ -15,23 +15,23 @@
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Hard-boiled</h2>
     </div>
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-      <div class="embed embed-3by2">
+  <div class="gutter-2 island-1-2 hover-box relative unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+      <div class="gutter-2 embed embed-3by2">
       <img class="hover-box-img embed-item" src="/images/card-3.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Feminist Science fiction</h2>
     </div>
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-      <div class="embed embed-3by2">
+  <div class="gutter-2 island-1-2 hover-box relative unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+      <div class="gutter-2 embed embed-3by2">
       <img class="hover-box-img embed-item" src="/images/card-4.jpg" alt="">
     </div>
-    <div class="hover-box-caption island-1-3 w-1 absolute">
+    <div class="hover-box hover-box-caption island-1-3 w-1 absolute">
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Planetary romance</h2>
     </div>
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+  <div class="gutter-2 island-1-2 hover-box relative unit [ xs-1 s-1 m-1-2 l-1-3 ]">
       <div class="embed embed-3by2">
       <img class="hover-box-img embed-item" src="/images/card-5.jpg" alt="">
     </div>
@@ -39,8 +39,8 @@
         <h2 itemprop="name" class="not-bold mega push-0 gutter-1-2">Cyberpunk</h2>
     </div>
   </div>
-  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-      <div class="embed embed-3by2">
+  <div class="gutter-2 island-1-2 hover-box relative unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+      <div class="gutter-2 embed embed-3by2">
       <img class="hover-box-img embed-item" src="/images/card-6.jpg" alt="">
     </div>
     <div class="hover-box-caption island-1-3 w-1 absolute">
