--- a/_patterns/product-page/genre-page.html
+++ b/_patterns/product-page/genre-page.html
@@ -1,65 +1,25 @@
 <main class="container">
 
-  <!-- Left Column / Headphones Image -->
   <div class="left-column">
-    <img data-image="black" src="images/black.png" alt="">
-    <img data-image="blue" src="images/blue.png" alt="">
-    <img data-image="red" class="active" src="images/red.png" alt="">
+    <img data-image="black" src="/images/placeholder.jpg" alt="">
   </div>
 
 
-  <!-- Right Column -->
   <div class="right-column">
-
-    <!-- Product Description -->
     <div class="product-description">
-      <span>Headphones</span>
-      <h1>Beats EP</h1>
-      <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
+      <span>Genre: Shenmo</span>
+      <h1 class="bold"> Title: Journey to the west</h1>
+      <p>By: We Cheng’en</p>
     </div>
 
-    <!-- Product Configuration -->
-    <div class="product-configuration">
-
-      <!-- Product Color -->
-      <div class="product-color">
-        <span>Color</span>
-
-        <div class="color-choose">
-          <div>
-            <input data-image="red" type="radio" id="red" name="color" value="red" checked>
-            <label for="red"><span></span></label>
-          </div>
-          <div>
-            <input data-image="blue" type="radio" id="blue" name="color" value="blue">
-            <label for="blue"><span></span></label>
-          </div>
-          <div>
-            <input data-image="black" type="radio" id="black" name="color" value="black">
-            <label for="black"><span></span></label>
-          </div>
-        </div>
-
-      </div>
-
-      <!-- Cable Configuration -->
-      <div class="cable-config">
-        <span>Cable configuration</span>
-
-        <div class="cable-choose">
-          <button>Straight</button>
-          <button>Coiled</button>
-          <button>Long-coiled</button>
-        </div>
-
-        <a href="#">How to configurate your headphones</a>
-      </div>
-    </div>
-
-    <!-- Product Pricing -->
+    <section class="grid" id="work">
+      <div class="unit [ xs-1 s-1-2 m-1-2 l-1-3 ]">
     <div class="product-price">
-      <span>148$</span>
-      <a href="#" class="cart-btn">Add to cart</a>
+      <a href="#" class="btn">Read book</a>
+    </div>
+    <div class="product-price">
+      <a href="#" class="btn">Download</a>
     </div>
   </div>
+  </section>
 </main>
