--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,7 +1,7 @@
 <div class="banner">
-      <img class="img-flex" src="../../images/banner.jpg" alt="">
+    <img class="img-flex" src="../../images/banner.jpg" alt="">
       <div class="info w-1">
-      <div class="grid grid-middle wrapper pin-c">
+      <div class="grid grid-middle wrapper ">
         <div class="unit xs-1 s-1 m-1-2 l-1-2">
           <h1 class="pad-t-1-2 push-none giga">Discover some of the best obscure book genres out there!</h1>
           <p class="pad-t-1-2 giga">Download up to 2 selected books for every genre for free.</p>
