--- a/_patterns/product-page/genre-page.html
+++ b/_patterns/product-page/genre-page.html
@@ -1,7 +1,10 @@
 <main class="container">
 
-  <div class="left-column">
-    <img data-image="black" src="/images/placeholder.jpg" alt="">
+<div class="grid">
+<div class="left-column">
+  <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
+    <div class="embed embed-3by2">
+    <img class="embed-item" src="/images/placeholder.jpg" alt="">
   </div>
 
 
@@ -12,7 +15,6 @@
       <p>By: We Cheng’en</p>
     </div>
 
-    <section class="grid" id="work">
       <div class="unit [ xs-1 s-1-2 m-1-2 l-1-3 ]">
     <div class="product-price">
       <a href="#" class="btn">Read book</a>
@@ -21,5 +23,6 @@
       <a href="#" class="btn">Download</a>
     </div>
   </div>
-  </section>
+  </div>
+  </div>
 </main>
