--- a/_patterns/cards/products.html
+++ b/_patterns/cards/products.html
@@ -1,4 +1,5 @@
-<div class="card">
-  <img class="img-flex" src"/products/fern-and-zip.jpg" alt="">
+<div class="product-card">
+  <img class="img-flex" src="../../images/fern-and-zip.jpg" alt="">
   <h2>Products</h2>
   <p>All made locally in Ottawa</p>
+</div>
