--- a/_patterns/cards/products.html
+++ b/_patterns/cards/products.html
@@ -1,5 +1,5 @@
 <div class="product-card">
-  <img class="img-flex" src="../../images/fern-and-zip.jpg" alt="">
+  <img class="img-flex" src="../../images/polkadot-50.jpg" alt="">
   <h2>Products</h2>
   <p>All made locally in Ottawa</p>
 </div>
