Add header to repo

--- a/_patterns/cards/home-banner.html
+++ b/_patterns/cards/home-banner.html
@@ -1,10 +1,19 @@
-<div class="home-banner">
-    <h1>Flora and Zip</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Paintings</a></li>
-        <li><a href="#">Prints</a></li>
-        <li><a href="#">Cards</a></li>
+<header class="masthead grid grid-middle island-1-2">
+    <div class="logo unit xs-1 s-1 m-1 l-1-4">
+      <h1 class="push-0 gutter-1-4 pad-b-1-4">Flora and Zip</h1>
+    </div>
+    <nav class="nav unit xs-1 s-1 m-1 l-3-4">
+      <ul class="list-group-inline push-0">
+        <li class="island-1-8">
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Paintings</a>
+        </li>
+        <li class="island-1-8">
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Prints</a>
+        </li>
+        <li class="island-1-8">
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Cards</a>
+        </li>
+        {% pattern buttons/ghost %}
       </ul>
     </nav>
-</div>
+  </header>
