--- a/_patterns/cards/image.html
+++ b/_patterns/cards/image.html
@@ -1,10 +1,10 @@
 <div class="card chop">
-  <img class="img-flex" src="/images/crystals/rose-quartz-stone.png" alt="">
+  <img class="img-flex" src="/images/crystals/{{include.image}}" alt="">
   <div class="island-1-2">
-    <h2>Rose Quartz Stone</h2>
-    <p><i>Unconditional Love • Happiness • Passion</i><br>
-      See the world through rose tinted glasses by tapping into the unconditional love of Rose Quartz Tumbled Stone. This stone serves as a gentle reminder that the most important person to love and nurture is yourself. Working with Rose Quartz opens up your heart to all kinds of love: self-love, familial love, friendship, romance and more.
+    <h2>{{include.tittle}}</h2>
+    <p><i>{{include.details}}</i><br>
+      {{include.more-details}}
     </p>
-    {% pattern buttons/basic text="Buy a Rose Stone"%}
+    {% pattern buttons/basic text=include.button_text%}
   </div>
 </div>
