Add cards, buttons, banners, and images to the pattern library

--- a/_patterns/buttons/attention.html
+++ b/_patterns/buttons/attention.html
@@ -1,1 +1,8 @@
-<a class="btn btn-attention text-upper" href="#">Shop Now</a>
+<a class="btn btn-attention text-upper icon-link" href="#">
+  <i class="icon i-32">
+    <svg>
+      <use xlink:href="/images/icons.svg#cart"></use>
+    </svg>
+  </i>
+  <span class="icon-label">Shop Now!<span>
+</a>
