--- a/_patterns/cards/promo-card.html
+++ b/_patterns/cards/promo-card.html
@@ -1,8 +1,8 @@
-<a class="card box-link cat-card" href="#">
+<a class="card box-link promo-card" href="#">
   <div class="embed embed-1by1 chop relative">
     <img class="img-flex embed-item card-img" src="/images/product-example.jpg" alt="">
-    <div class="cat-title pin-cb">
-      <p class="peta text-center push-1-2 bold">Mugs</p>
+    <div class="promo-title pin-c island">
+      <p class="peta text-center push-0 bold"> Now selling Mugs!</p>
     </div>
   </div>
 </a>
