--- a/_patterns/cards/sale-card.html
+++ b/_patterns/cards/sale-card.html
@@ -1,4 +1,4 @@
-<a class="product island-1-2 link-box relative" href="#">
+<a class="product island-1-2 link-box relative chop" href="#">
   <div class="chop push-1-2">
     <img class="img-flex card-img" src="/images/product-example.jpg" alt="">
   </div>
