Update the home page banner with a search form field

--- a/_patterns/banners/page-banner.html
+++ b/_patterns/banners/page-banner.html
@@ -1,9 +1,9 @@
-<div class="banner chop relative">
+<div class="hero-banner chop relative">
   <div class="banner-img embed embed-16by9">
     <img class="img-flex embed-item" src="/images/banner-example.jpg" alt="">
   </div>
   <div class="banner-content text-center pin-c gutter-2 island">
     <h2 class="push-1-2 exa banner-title">Your space adventure starts here</h2>
-    {% pattern buttons/attention %}
+    {% pattern forms/search %}
   </div>
 </div>
